<resources>
    <string name="appName">smartCPS</string>
    <string name="menuSettings">Settings</string>
    <string name="menuHelp">Help</string>
    <string name="menuFloor">Floor View</string>
    <string name="menuProcess">Process Library</string>
    <string name="menuAppdashboard">Apps</string>
    <string name="btnNext">Next »</string>
    <string name="btnFinish">Finish</string>
    <string name="btnOk">OK</string>
    <string name="btnYes">Yes</string>
    <string name="btnNo">No</string>
    <string name="btnClose">Close</string>
    <string name="descriptionLogo">Logo</string>
    <string name="executeService">Run service</string>
    <string name="noDevices">There are no devices registered at the moment. Add new devices via settings.</string>
    <string name="noDevices_Children">No devices here yet. You can add devices, if you go to settings > add devices.</string>
    <string name="currentStep">Step %1$s of %2$s</string>
    <string name="choose">Choose</string>
    <string name="notImplementedYet">Not implemented yet.</string>
    <string name="seqButton_send">Load Model</string>
    <string name="help_reminderToast">Got lost? Access the help in the upper right area.&lt;br />&lt;br />Longtap this message to dismiss it permanently.&lt;br />Tap this message for a short amount of time to hidei it.</string>
    <string name="help_reminderToast_Children">Are you lost and need help? Access the help in the upper right area.&lt;br />&lt;br />Longtap here to dismiss the message for ever.&lt;br />Tap here to hide this message.</string>
    <string name="help_reminderStopDisplaying">Would you like to discard the help function?</string>
    <string name="help_reminderStopDisplaying_Children">You dont like the help messages no more?</string>
    <string name="help_start_txtHeadline">Need help? We\'ll find a solution.</string>
    <string name="help_start_txtNormal1">Welcome to smartCPS help. Choose a topic that fits your interest.</string>
    <string name="help_whatIsSmartCPS_txtHeadline">What is smartCPS?</string>
    <string name="help_whatIsSmartCPS_contentHtml">smartCPS is a &lt;a href=\"smartcps://Software\">software&lt;/a>, you can access with your &lt;a href=\"smartcps://Tablet\">tablet&lt;/a> or &lt;a href=\"smartcps://Smartphone\">phone&lt;/a> to manage your devices at home. The app also dynamically adapts:&lt;br/>&lt;br/>Are you experienced when it comes to software like this or do you need help from time to time? If a disability TODO..</string>
    <string name="help_whatIsSmartCPS_contentHtml_Children">smartCPS is a &lt;a href=\"smartcps://Software\">software&lt;/a>, which you can acess with a &lt;a href=\"smartcps://Tablet\">tablet&lt;/a> or &lt;a href=\"smartcps://Smartphone\">phone&lt;/a> to manage your devices. If you have any disabilities smartCPS will help you..</string>
    <string name="help_whatIsSwiping_txtHeadline">What does \"swipe over the display\" mean?</string>
    <string name="help_whatIsSwiping_contentHtml">Im besten Wortsinn bedeutet "Wischen" (englisch auch \"swiping\") das Aufsetzen Ihres Fingers auf dem &lt;a href=\"smartcps://Touchscreen\">Touchscreen&lt;/a> und das anschließende Bewegen des aufgesetzten Fingers in eine beliebige Richtung. Es handelt sich also um eine Geste des Fingers.</string>
    <string name="help_whatIsSwiping_contentHtml_Children">Im besten Wortsinn bedeutet "Wischen" (englisch auch \"swiping\") das Aufsetzen deines Fingers auf dem &lt;a href=\"smartcps://Touchscreen\">Touchscreen&lt;/a> und das anschließende Bewegen des aufgesetzten Fingers in irgendeine Richtung. Es handelt sich also um eine Geste des Fingers.</string>
    <string name="help_whatIsLongClick_txtHeadline">Was bedeutet \"gedrückt halten\"?</string>
    <string name="help_whatIsLongClick_contentHtml">Wenn ein Finger auf den &lt;a href=\"smartcps://Touchscreen\">Touchscreen&lt;/a> gelegt wird und dort verbleibt, also nicht wieder abgehoben wird (das wäre ein normales Antippen), spricht man vom \"gedrückt halten \".&lt;br />&lt;br />Sie können auch mehrere Finger &lt;strong>gleichzeitig&lt;/strong> gedrückt halten.</string>
    <string name="help_whatIsLongClick_contentHtml_Children">Wenn ein Finger auf den &lt;a href=\"smartcps://Touchscreen\">Touchscreen&lt;/a> gelegt wird und dort auch bleibt, also nicht wieder abgehoben wird (das wäre ein normales Antippen), spricht man vom \"gedrückt halten \".&lt;br />&lt;br />Du kannst auch mehrere Finger &lt;strong>gleichzeitig&lt;/strong> gedrückt halten.</string>
    <string name="help_howToProceed_txtHeadline">Wie komme ich zum nächsten Schritt?</string>
    <string name="help_howToProceed_contentHtml">Tippen Sie entweder auf die Schaltfläche \"Weiter\" am unteren rechten Bildschirmrand oder wischen Sie schnell von rechts nach links über den Bildschirm.</string>
    <string name="help_howToProceed_contentHtml_Children">Tippe entweder auf die Schaltfläche \"Weiter\" am unteren rechten Bildschirmrand oder wische schnell von rechts nach links über den Bildschirm.</string>
    <string name="help_howToReturn_txtHeadline">Wie kehre ich zum letzten Schritt zurück?</string>
    <string name="help_howToReturn_contentHtml">Tippen Sie entweder auf die \"Zurück\"-Schaltfläche am unteren linken Bildschirmrand oder wischen Sie schnell von links nach rechts über den Bildschirm.</string>
    <string name="help_howToReturn_contentHtml_Children">Tippe entweder auf die \"Zurück\"-Schaltfläche am unteren linken Bildschirmrand oder wische schnell von links nach rechts über den Bildschirm.</string>
    <string name="help_howDoesTheReelMenuWork_txtHeadline">Wie funktioniert ein Reel-Menü?</string>
    <string name="help_howDoesTheReelMenuWork_contentHtml">Eine ausführliche Einführung zum Reel-Menü können Sie zu jeder Zeit über&lt;br />\"Einstellungen -> Einführung\" erhalten. Die \"Einstellungen\"-Schaltfläche finden Sie am oberen rechten Bildschirmrand.</string>
    <string name="help_howDoesTheReelMenuWork_contentHtml_Children">Eine ausführliche Einführung zum Reel-Menü kannst du zu jeder Zeit über&lt;br />\"Einstellungen -> Einführung\" erhalten. Die \"Einstellungen\"-Schaltfläche findest du am oberen rechten Bildschirmrand.</string>
    <string name="tutWelcome_txtHeadline">Herzlich willkommen.</string>
    <string name="tutWelcome_txtNormal1">&lt;b>Bitte hören Sie nicht auf, zu lesen!&lt;/b> Bevor Sie loslegen können, sollten Sie sich mit der Bedienung von smartCPS vertraut machen.</string>
    <string name="tutWelcome_txtNormal2">Um fortzufahren, tippen Sie auf &lt;b>\"Weiter\"&lt;/b> oder &lt;b>wischen Sie schnell von rechts nach links&lt;/b> über den Bildschirm. Falls Sie &lt;b>Hilfe&lt;/b> beim aktuellen Dialogschritt benötigen, tippen Sie auf das &lt;b>Hilfe-Symbol am oberen rechten Bildschirmrand&lt;/b> oder &lt;b>zeichnen Sie mit Ihrem Finger einen Kreis&lt;/b> auf den Bildschirm.</string>
    <string name="action_sort_menuGroupName">Sortieren</string>
    <string name="action_sort_by_name">nach Name</string>
    <string name="action_sort_by_type">nach Typ</string>
    <string name="action_sort_by_room">nach Raum</string>
    <string name="action_sort_by_none">aufheben</string>
    <string name="action_filter_menuGroupName">Filter</string>
    <string name="action_filter_menuGroupServicesName">Connection</string>
    <string name="action_filter_sortTemp">temperature sensors</string>
    <string name="action_filter_sortLight">light sensors</string>
    <string name="action_filter_tv">TV devices</string>
    <string name="action_filter_all">Show all</string>
    <string name="action_menu_services_semiwa">semiwa: unknown</string>
    <string name="action_menu_services_process">process: unknown</string>
    <string name="action_menu_services_map">map: unknown</string>
    <string name="action_menu_services_process_client">process client: unknown</string>
    <string name="action_menu_services_unknown">myservice: unknown</string>
    <string name="settings_category_ui_title">User interface</string>
    <string name="settings_ui_theme_title">Color scheme (theme)</string>
	<string name="settings_category_robot_title">Robotereinstellungen</string>
    <string name="settings_category_services_title">Service Connection</string>
    <string name="settings_services_semiwa_title">SeMiWa IP</string>
    <string name="settings_services_process_title">Process Engine IP</string>
    <string name="settings_services_map_title">Map Server IP</string>
    <string name="services_summary">IP addresses for all services</string>
    <string name="settings_ui_colored_state_encoding_title">Farbige Sensorwerte</string>
    <string name="settings_ui_colored_state_encoding_summary">Legt fest, ob kritische Sensorwerte farbig markiert werden (falls nicht, wird dies durch Zeichen kenntlich gemacht).</string>
    <string name="settings_ui_vibrations_title">Vibrationen</string>
    <string name="settings_ui_vibrations_summary">Legt fest, ob das Gerät beim Öffnen von Menüs oder beim Verschieben von Geräten vibriert.</string>
    <string name="settings_ui_help_reminder_title">Hilfeerinnerung</string>
    <string name="settings_ui_help_reminder_summary">Legt fest, ob in bestimmten zeitlichen Abständen eine Erinnerungsnachricht zur Hilfefunktion eingeblendet wird.</string>
    <string name="settings_ui_assistant_based_navigation_title">Assistentenbasierte Navigation</string>
    <string name="settings_ui_assistant_based_navigation_summary">Legt fest, ob die Navigation statt formular- eher assistentenbasiert ist. (Sind Reel-Menüs aktiv, ist die Navigation immer assistentenbasiert.)</string>
    <string name="settings_category_tutorial_title">Tutorial</string>
    <string name="settings_category_devices_title">Devices</string>
    <string name="settings_category_dev_title">Developer Settings</string>
    <string name="settings_category_usersettings_title">Benutzereinstellungen</string>
    <string name="duplicate_name_message">Name already exists. Choose a different one.</string>
    <string name="add_item_dialog_name">Name:</string>
    <string name="add_map_dialog_default_name">Map</string>
    <string name="add_map_dialog_source">Source</string>
    <string name="add_map_dialog_default_source">home/source</string>
    <string name="add_map_dialog_ip">IP:</string>
    <string name="add_map_dialog_default_ip">192.168.1.6</string>
    <string name="add_map_dialog_port">Port:</string>
    <string name="add_map_dialog_default_port">9090</string>
    <string name="add_robot_dialog_default_name">Robot</string>
    <string name="add_robot_dialog_ip">IP:</string>
    <string name="add_robot_dialog_default_ip">192.168.1.5</string>
    <string name="add_robot_dialog_port">Port:</string>
    <string name="add_robot_dialog_default_port">9090</string>
    <string name="add_robot_dialog_type_turtle">Turtlebot</string>
    <string name="add_robot_dialog_type_nao">Naobot</string>
    <string name="add_robot_dialog_type_you">Youbot</string>
    <string name="robot_list_item_icon">Icon of the Robot</string>
    <string name="robot_list_item_name">Default Robot</string>
    <string name="robot_list_item_video">Show Camera View</string>
    <string name="robot_list_item_edit">Edit Robot</string>
    <string name="robot_settings_robot_section_title">Robot</string>
    <string name="robot_settings_video_section_title">Mjpeg Server</string>
   	<string name="robot_rosbridge_port_title">Rosbridge Port</string>
	<string name="robot_sending_delay_title">Sending Delay</string>
	<string name="robot_video_port_title">Port</string>
    <string name="robot_video_topic_title">ROS Image Topic</string>
    <string name="robot_video_quality_title">Videoquality</string>
    <string name="action_sort_menuGroupName_e">Sort</string>
    <string name="action_sort_by_name_e">by name</string>
    <string name="action_sort_by_type_e">by type</string>
    <string name="action_sort_by_date_e">by date</string>
    <string name="action_sort_by_none_e">unsort</string>
</resources>