<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="eu.vicci.ecosystem.standalone.controlcenter.android.DashboardTestActivity" >

    <item
        android:id="@+id/menu_sort_group"
        android:showAsAction="ifRoom"
        android:title="@string/action_sort_menuGroupName_e">
        <menu>
            <item
                android:id="@+id/menu_sort_by_name_e"
                android:showAsAction="ifRoom"
                android:title="@string/action_sort_by_name_e"/>
            <item
                android:id="@+id/menu_sort_by_type_e"
                android:showAsAction="ifRoom"
                android:title="@string/action_sort_by_type_e"/>
            <item
                android:id="@+id/menu_sort_by_date_e"
                android:showAsAction="ifRoom"
                android:title="@string/action_sort_by_date_e"/>
            <item
                android:id="@+id/menu_sort_by_none_e"
                android:showAsAction="ifRoom"
                android:title="@string/action_sort_by_none_e"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_filter"
        android:icon="?actionFilterDrawable"
        android:showAsAction="ifRoom"
        android:title="@string/action_filter_menuGroupName"/>

</menu>