<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:paddingBottom="10dp"
    android:layout_height="58dp"
    android:clickable="true">
	
     <!-- Icon of the robot -->
    <ImageView
        android:id="@+id/robot_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/ic_robo_default_light"
        android:contentDescription="@string/robot_list_item_icon" >
    </ImageView>
	
     <!-- Name of the robot -->
    <TextView
        android:id="@+id/context_robot_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/robot_list_item_name"
        android:textColor="@color/list_item_text_grey"
        android:textSize="20sp" 
        android:layout_toRightOf="@id/robot_icon">
    </TextView>
     
    <!-- Edit Button -->
    <ImageButton
        android:id="@+id/robot_edit_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
		android:layout_marginRight="10dp"
		android:layout_marginTop="10dp"
        android:src="@drawable/ic_edit"
        android:background="@null"
        android:contentDescription="@string/robot_list_item_edit"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_alignParentRight="true"/>
    
     <!-- Video Button for gyro control -->
     <ImageButton
        android:id="@+id/robot_video_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
		android:layout_marginRight="10dp"
		android:layout_marginTop="10dp"
        android:src="@drawable/ic_video"
        android:background="@null"
        android:contentDescription="@string/robot_list_item_video"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_toLeftOf="@id/robot_edit_button"/>

</RelativeLayout>